# string_calculator

./: .gitignore  CMakeLists.txt  README.md  expressions.txt
include/: StringCalculator.hpp  TreeCalculator.hpp
include/exceptions/: InvalidTokenException.hpp
include/expressionParser/: ExpressionParser.hpp  epTypesAndStructs.hpp
include/expressionTree/: ExpressionTree.hpp  etTypesAndStructs.hpp
src/: ExpressionParser.cpp  ExpressionTree.cpp  StringCalculator.cpp  TreeCalculator.cpp  main.cpp
tests/: .gitignore  CMakeLists.txt  calc_tests.cpp
