cmake_minimum_required(VERSION 3.16)

project(Calculator VERSION 1.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(Calculator src/main.cpp src/ExpressionParser.cpp src/ExpressionTree.cpp src/StringCalculator.cpp src/TreeCalculator.cpp)

target_include_directories(${PROJECT_NAME} PUBLIC
                           "${PROJECT_BINARY_DIR}"
                           )